# WonderfulUI

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  PRODUCT.md  README.md  SECURITY.md  VERSIONING.md  package.json  tsconfig.json  versions.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cache-warm.yml  ci.yml  release.yml
docs/: ACLOS_FORMAT.md  AGENT_WORKFLOW.md  ARCHITECTURE.md  FRONTEND_CONVENTIONS.md  UPDATER.md
docs/superpowers/plans/: 2026-06-21-gpu-acceleration-plan.md  2026-06-21-vue3-migration.md  2026-07-17-player-context-menu-screenshot.md  2026-07-17-update-ui-dev-simulator.md
docs/superpowers/specs/: 2026-06-21-gpu-acceleration-design.md  2026-06-21-vue3-migration-design.md  2026-06-22-vue-component-tests-design.md  2026-07-17-player-context-menu-screenshot-design.md  2026-07-17-update-ui-dev-simulator-design.md
scripts/: check-versions.ts  version-bump.ts
src-tauri/: .gitignore  Cargo.toml  FileAssociation.nsh  installer.nsi  tauri.conf.json  utils.nsh
src-tauri/capabilities/: default.json
src-tauri/src/: app_log.rs  frame_capture.rs  lan_ip.rs  lib.rs  main.rs  media_protocol.rs  os_shell.rs  share_server.rs
src-tauri/src/parser/: crypto.rs  error.rs  hex.rs  mod.rs  model.rs  reader.rs
tools/: update-valorant-skins.ts
