[package]
name = "wonderful-ui"
version = "0.1.1"
authors = ["WonderfulUI Contributors"]
license = "GPL-3.0"
repository = "https://github.com/WizisCool/WonderfulUI"
homepage = "https://github.com/WizisCool/WonderfulUI"
description = "Offline parser + GUI for ACLOS WonderfulDb"
edition = "2021"
rust-version = "1.77"

[features]
default = []
updater = ["tauri-plugin-updater"]

[lib]
name = "wonderful_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
ureq = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
rayon = "1"
tauri-plugin-updater = { version = "2", optional = true }
