[package]
name = "wonderful-ui"
version = "0.1.3"
authors = ["WonderfulUI Contributors"]
license = "GPL-3.0"
repository = "https://github.com/WizisCool/WonderfulUI"
homepage = "https://github.com/WizisCool/WonderfulUI"
description = "Offline parser + GUI for ACLOS WonderfulDb"
edition = "2021"
rust-version = "1.77"

[features]
default = []
updater = ["tauri-plugin-updater"]

[lib]
name = "wonderful_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
ureq = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
rayon = "1"
tauri-plugin-updater = { version = "2", optional = true }

[target.'cfg(windows)'.dependencies]
# 与 tauri 2.0.1 锁定的 windows 0.61 同主版本，直接用 ShellExecuteW 走原生
# "以默认程序打开" 通道，绕过 cmd /c 解析开销。
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
